# xsdmerge

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  rapidxml-1.13.1.tar.xz
src/: cpp_generator.cpp  cpp_generator.hpp  main.cpp  utils.cpp  utils.hpp
